layout bug fix

--- a/stylesheets/he-core.css
+++ b/stylesheets/he-core.css
@@ -281,24 +281,30 @@ height:115px;
   text-shadow: 0px 1px 0px rgba(256, 256, 256, 0.6);
 }
 
-#home ul.icons a{
+
+/* Icons */
+
+.icons {
+  width: 365px;
+  margin: 0px auto;
+}
+
+.icons a {
   float: left;
   text-align: center;
   opacity: 0.8;
   margin: 20px 10px;
 }
 
-#home ul.icons a:hover{
+.icons a:hover {
   opacity: 0.9;
 }
 
-#home ul.icons li{
-  list-style: none;
-}
 
-#home ul.icons{
-  width: 365px;
-  margin: 0px auto;
+/* Services */
+
+.services {
+  margin-top: 50px;
 }
 
 .services li {
@@ -328,7 +334,10 @@ height:115px;
   font-size:14px;
 }
 
-.home-button{
+
+/* Home.Red Button */
+
+.home-button {
   position:relative;
 }
 
@@ -345,16 +354,6 @@ height:115px;
   position:absolute;
   margin-top:-45px;
 }
-
-
-#home ul.services {
-  margin-top: 50px;
-}
-
-#home ul.icons {
-  margin-top: 30px;
-}
-
 
 a.red-button{
   background: url(/images/red-button.png) center no-repeat;
@@ -422,26 +421,16 @@ a.white-button:hover{
   background-color:#d92727;
   background-image: url(/images/bg-process.jpg);
   background-repeat:repeat;
-  padding-bottom:100px;
   float:left;
 }
 
-#process h2{
-  font-size: 82px;
-  text-align: center;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: bold;
+#process h2 {
+  color:#fff;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
-  line-height: 80px;
 }
 
 #process p.sub {
-  font-family: 'lato';
-  font-weight:300;
-  font-size:36px;
   color:#800404;
-  text-align: center;
 }
 
 #process li {
@@ -497,16 +486,31 @@ a.white-button:hover{
 /*===== Clientes =====*/
 /*====================*/
 
-#cliente{
+#cliente {
   width:100%;
-  background-image: url(/images/bg-cliente.jpg);
-  background-repeat:no-repeat;
-  background-position: center 385px;
-  padding-bottom:100px;
+  background: url("/images/bg-cliente.jpg") center 425px no-repeat;
+  border-bottom: 5px solid #b80606;
   float:left;
 }
 
-#cliente h3{
+#cliente h2, #process h2, #time h2 {
+  width:100%;
+  font-size: 76px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  float:left;
+}
+
+#cliente .sub, #process .sub, #time .sub {
+  font-family: 'lato';
+  font-weight:300;
+  font-size:36px;
+  color:#6d7171;
+  text-align: center;
+}
+
+#cliente h3 {
   text-align:center;
   font-size:22px;
   font-weight:300;
@@ -515,29 +519,8 @@ a.white-button:hover{
 
 #cliente iframe {
   box-shadow: 0px 0px 10px rgba(0, 10, 0, 0.5);
-  margin-top:30px;
 }
 
-#cliente h2{
-  font-size: 82px;
-  text-align: center;
-  color: #d92727;
-  text-transform: uppercase;
-  font-weight: bold;
-  line-height: 80px;
-}
-
-#cliente p.sub {
-  font-family: 'lato';
-  font-weight:300;
-  font-size:36px;
-  color:#6d7171;
-  text-align: center;
-}
-
-#cliente a.red-button{
-margin-top:5px;
-}
 
 /*====================*/
 /*===== Projects =====*/
@@ -660,47 +643,20 @@ margin-top:50px;
 }
 
 
-
-/*====================*/
-/*======= Time =======*/
-/*====================*/
+/* Time */
 
 #time {
   width:100%;
+  background: #efefef url("/images/bg-time.png top center no-repeat");
   float:left;
 }
 
-#time h2{
-  font-size: 82px;
-  text-align: center;
-  color: #d92727;
-  text-transform: uppercase;
-  font-weight: bold;
-  line-height: 80px;
-}
-
-#time p.sub {
-  font-family: 'lato';
-  font-weight:300;
+#time .sub {
   font-size:21px;
   color:#6d7171;
-  text-align: center;
 }
 
-
-#time {
-  padding-bottom: 100px;
-  background-image: url(/images/bg-time.png);
-  background-repeat:no-repeat;
-  background-position:top center;
-  background-color:#efefef;
-}
-
-#time ul {
-  margin-top: 20px;
-}
-
-#time ul li{
+#time ul li {
   list-style: none;
   display: block;
   width: 237px;
@@ -740,7 +696,6 @@ margin-top:50px;
 #time ul li.fiuza{ background-image: url(/images/time-fiuza.jpg);}
 #time ul li.mikael {background-image: url(/images/time-mikael.jpg);}
 #time ul li.voce{ background-image: url(/images/time-voce.jpg);}
-
 
 #time ul li:hover {
   list-style: none;
